<resources>
    <string name="app_name">Mall_s</string>
    <string name="title_home">首页</string>
    <string name="title_special">专题</string>
    <string name="title_classfiy">分类</string>
    <string name="title_trolley">购物车</string>
    <string name="title_own">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>